--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@types/papaparse": "^5.3.16",
     "@types/uuid": "^10.0.0",
     "lucide-react": "^0.544.0",
     "next": "15.5.3",
+    "papaparse": "^5.5.3",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-hook-form": "^7.62.0",
